--- a/static/css/header.css
+++ b/static/css/header.css
@@ -61,9 +61,13 @@ a {
 }
 
 #header-video-background {
-  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
+  overflow: hidden;
 }
 
 .background-video {
@@ -89,7 +93,6 @@ a {
   z-index: 3;
   display: flex;
   align-items: center;
-  margin-top: 25%;
   margin-left: 6em;
   margin-right: 40em;
 }
