--- a/static/css/header.css
+++ b/static/css/header.css
@@ -52,7 +52,7 @@ a {
 .stack {
   position: relative;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .stack > * {
@@ -106,7 +106,7 @@ a {
   margin-left: 2em;
 }
 
-#header-h2 {
+#header-h1 {
   font-size: 3em;
   font-family: 'Poppins', sans-serif;
   font-weight: bold;
