--- a/static/css/geral.css
+++ b/static/css/geral.css
@@ -14,11 +14,11 @@ body {
 .texto {
     font-size: 1.4em;
     font-family: 'Inter', sans-serif;
+    text-indent: 1.5em;
 }
 
 .seção {
-    margin-left: 10em;
-    margin-right: 10em;
+    margin-inline: 10em;
 }
 
 h2 {
