--- a/static/css/media.css
+++ b/static/css/media.css
@@ -2,6 +2,10 @@
     #riscos .riscos {
         margin-inline: 6em;
     }
+
+    #header-title {
+        width: 75%;
+    }
 }
 
 @media screen and (max-width: 1020px) { 
@@ -64,16 +68,42 @@
     #riscos .riscos .risco .conteudo button {
         display: none;
     }
+
+    #header-title {
+        width: 80%;
+    }
 }
 
 @media screen and (max-width: 700px) {
     .seção {
         margin-inline: 5em
     }
+    
+    #header-title {
+        width: 100%;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #header-texto {
+        margin: 0;
+        text-align: center;
+    }
 }
 
 @media screen and (max-width: 400px) {
     .seção {
-        margin-inline: 2.5em
-    } 
+        margin-inline: 2.5em;
+    }
+
+    #header-h1 {
+        font-size: 2em;
+    }
+
+    #header-p {
+        font-size: 1em;
+    }
 }
