--- a/static/css/divisão.css
+++ b/static/css/divisão.css
@@ -1,5 +1,7 @@
-#divisão > div >img {
-    width: 70%;
+#divisão > div > hr {
+    width: 100%;
+    height: 0.1em;
+    background-color: #402012;
 }
 
 #divisão > div {
@@ -7,3 +9,4 @@
     justify-content: center;
     align-items: center;
 }
+
