--- a/static/css/riscos.css
+++ b/static/css/riscos.css
@@ -2,6 +2,11 @@
     background: rgb(219,156,109);
     background: linear-gradient(90deg, rgba(219,156,109,1) 0%, rgba(255,224,165,1) 50%, rgba(219,156,109,1) 100%);
     margin: 0;
+    margin-block: 2em;
+}
+
+#riscos .titulo {
+    padding-top: 1em;
 }
 
 #riscos .risco img {
@@ -89,4 +94,8 @@
 #riscos .riscos .risco:hover .conteudo {
     visibility: visible;
     opacity: 1;
+}
+
+#riscos .riscos {
+    padding-bottom: 1em;
 }
