--- a/static/css/header.css
+++ b/static/css/header.css
@@ -43,20 +43,25 @@ nav #hamburguer {
   padding: 1em;
 }
 
-li {
+ul {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  padding: 0.75em;
+  margin: 0;
 }
 
-ul {
+li {
   font-family: 'Inter', sans-serif;
   font-weight: bold;
   font-size: 1.2em;
 }
 
-#ul-chat {
+#li-chat {
   display: flex;
   justify-content: center;
 }
