--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,10 +1,9 @@
-footer .footerText {
+.footerText {
     background-color: #e6b677;
     padding: 10px 20px;
     color: white;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 footer .imgFooter {
@@ -13,23 +12,17 @@ footer .imgFooter {
     margin-right: 20px;
 }
 
-footer .new {
-    left: 20px;
-}
-
 footer .esquerda {
     display: flex;
-    width: 85%;
-    margin-left: 80px;
-    align-items: center;
-
+    width: 50%;
+    flex-direction: column;
 }
 
 footer .direita {
     justify-content: center;
     align-items: center;
     display: flex;
-    margin-right: 5em;
+    width: 50%;
 }
 
 
@@ -45,7 +38,6 @@ footer .inputNew {
 }
 
 footer .ButtonNew {
-   
     background-color: #b3a972;
     font-family: 'Inter', sans-serif;
     font-size: 0.90em;
@@ -55,9 +47,10 @@ footer .ButtonNew {
     margin-top: 10px;
     font-weight: 700;
     margin-bottom: 1em;
+    width: 10em;
 }
 
-footer .new h1 {
+footer .esquerda h1 {
     font-family: 'Inter', sans-serif;
     color: #402012;
 }
