--- a/static/css/geral.css
+++ b/static/css/geral.css
@@ -13,6 +13,8 @@ body {
     color: #402012;
     font-weight: bold;
     font-size: 2em;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .texto {
