--- a/static/css/media.css
+++ b/static/css/media.css
@@ -1,3 +1,15 @@
+@media screen and (max-width: 1150px) {
+
+    footer .esquerda {
+        width: 60%;
+    }
+
+    footer .direita {
+        width: 40%;
+    }
+}
+
+
 @media screen and (max-width: 1100px) {
     #riscos .riscos {
         margin-inline: 6em;
@@ -35,6 +47,27 @@
         width: 75% !important;
     }
     
+}
+
+@media screen and (max-width: 870px) {
+    .footerText {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    footer .esquerda {
+        align-items: center;
+    }
+
+    footer .direita {
+        margin-top: 5em;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
 }
 
 @media screen and (max-width: 860px) {
@@ -80,14 +113,6 @@
     #modal {
         padding-inline: 5em;
     }
-    
-    footer .footerText {
-        flex-direction: column;
-    }
-
-    footer .direita{
-        flex-direction: column;
-    }
 }
 
 @media screen and (max-width: 700px) {
@@ -107,6 +132,16 @@
     #header-texto {
         margin: 0;
         text-align: center;
+    }
+}
+
+@media screen and (max-width: 670px) {
+    footer .esquerda {
+        width: 100%;
+    }
+
+    footer .direita {
+        width: 100%;
     }
 }
 
