--- a/static/css/newsletter.css
+++ b/static/css/newsletter.css
@@ -45,3 +45,47 @@
     font-weight: bold;
     font-size: 2em;
 }
+
+#menu-newsletter {
+    font-family: 'Inter', sans-serif;
+    color: #402012;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#menu-newsletter h2 {
+    font-family: 'Poppins', sans-serif;
+}
+
+#menu-newsletter .emails {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+}
+
+#menu-newsletter .emails .email {
+    border: 0.1em #402012 solid;
+    border-radius: 1.25em;
+    padding: 0.5em;
+    min-width: 15em;
+    cursor: pointer;
+}
+
+#menu-newsletter .emails .email > * {
+    display: inline;
+    vertical-align: middle;
+}
+
+#menu-newsletter .emails .email .icone,  #menu-newsletter .emails .email .status {
+    font-size: 2em;
+    user-select: none;
+}
+
+#menu-newsletter .emails .email .status {
+    float: right;
+}
+
+#menu-newsletter .emails .novo-email {
+    border-style: dashed;
+}
