--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -37,6 +37,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #402012;
 }
 
 #chat .container .titulo-container .fechar {
